--- a/local.env
+++ b/local.env
@@ -1,5 +1,6 @@
 SERVER=127.0.0.1
 PORT=5000
 CONNECTION_STRING=mongodb://admin:admin@127.0.0.1:27017/gotravel
+CON=mongodb+srv://admin:admin@cluster0.szzuy.mongodb.net/?retryWrites=true&w=majority
 CLIENT_ID=FAMrbww1l8rybRMtw8tiHgLcuWVBB7Z9
 SECRET_ID=iGwczbmWUgBjN2Ny
